--- a/index2.html
+++ b/index2.html
@@ -204,6 +204,7 @@
           <div class="overlay-content">
             <a href="">RESUME</a>
             <a href="https://sachinkrb.github.io/">HOME</a>
+            <a href="https://sachinkrb.github.io/index3.html">CREATING PROTOTYPE FOR DJANGO PROJECT</a>
             <a href="Sachin's Resume.pdf" download>DOWNLOAD PDF VERSION</a>
             <a href="#" onclick="viewSource()">VIEW PAGE SOURCE</a>
             <a href="https://linuxchats.com">WORDPRESS PROJECT</a>
