--- a/index3.html
+++ b/index3.html
@@ -56,7 +56,7 @@ h5 {
 }
 
 p {
-	font-family: Raleway;
+	font-family: 'Raleway', sans-serif;
 	font-size: 0.85em;
 }
 .navbar {
@@ -69,6 +69,7 @@ p {
 
 /* Style the navigation bar links */
 .navbar a {
+	font-family: 'Raleway', sans-serif;
   float: left;
   display: block;
   color: white;
