--- a/index3.html
+++ b/index3.html
@@ -109,6 +109,9 @@ p {
     float: right;
     display:block;
   }
+  .header {
+  	background-image: url("images/header5.webp");
+  }
 }
 
 @media only screen and (device-width: 768px),
