--- a/index3.html
+++ b/index3.html
@@ -265,12 +265,12 @@ background-image: url("images/debut_light.png");
 
 <div class="navbar" id="myNavbar">
 
-  <a href="javascript:void(0)">HOME  </a>
+  <a href="index3.html">HOME  </a>
   <a href="javascript:void(0)">POLITICS</a>
   <a href="javascript:void(0)">SPORTS</a>
   <a href="javascript:void(0)">TECHNOLOGY</a>
   <a href="javascript:void(0)">HEALTH</a>
-  <a href="javascript:void(0)">WEATHER</a>
+  <a href="weather.html">WEATHER</a>
   <a href="javascript:void(0)">TRAFFIC</a>
   <a href="javascript:void(0)">DEALS</a>
    <a href="javascript:void(0)">HOW TOs</a>
