--- a/weather.html
+++ b/weather.html
@@ -5,7 +5,16 @@
 </head>
 <body>
 
-<div id="openweathermap-widget-12"><div id="openweathermap-widget-11"></div><div id="openweathermap-widget-15"></div></div>
+<div id="openweathermap-widget-12">
+	<div id="openweathermap-widget-11">
+		
+	</div>
+	<div id="openweathermap-widget-15">
+		
+	</div>
+</div>
+
+
 <script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 12,cityid: '4703223',appid: '70500676b9f9a2219cc22b98c167bfd2',units: 'imperial',containerid: 'openweathermap-widget-12',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
 
 <script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 15,cityid: '4703223',appid: '70500676b9f9a2219cc22b98c167bfd2',units: 'imperial',containerid: 'openweathermap-widget-15',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
