--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,6 @@
   <meta charSet="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  
   <style>
     html {
       font-size: 16px;
@@ -215,13 +214,13 @@
 
         <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU</span>
 
-
       <div class="resume-frame-1">
             <header>
               <h1>Sachin R.</h1>
               <h1>sachink.rb@gmail.com</h1>
 
-            <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }</h2>
+            <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }<br> Portfolio Website: <a href ="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+            <h4></h4>
             </header>
             <div class="resume-frame-2">
               <section class="resume-frame-3">
@@ -301,14 +300,14 @@
                   <h1>Personal Tiny Creative Works & Workshops</h1>
                   </hgroup>
                   <div>
-                   <b>Here lies my remains of what I have practiced & created:</b>
+                   <b>CLICK on the links below to direct you to my few remains of what I have practiced & created:</b>
                   </div>
                   
                   <ul>
-                  	<li><a href="index3.html" style="color:black"> Working On a Prototype for Django Website </a></li>
-                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github powered Portfolio Website</a></li>
-                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS</a></li>
-                    <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects</a></li>
+                  	<li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Working on Responsive Design Website Prototype for Django Project (Current) </a></li>
+                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
+                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS (linuxchats.com)</a></li>
+                    <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects (github.com/sachinkrb)</a></li>
                     <li><a href="#" style="color:black"> Django Powered Website Coming Soon!</a></li>
                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Account</a></li>
                     <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it Account</a></li>
