--- a/index3.html
+++ b/index3.html
@@ -11,37 +11,33 @@
   box-sizing: border-box;
 }
 
-/* Style the body */
 body {
   margin: 0;
 }
 
-/* Header/logo Title */
 .header {
   font-family: 'Orbitron', sans-serif;
   padding: 1px;
   text-align: center;
-   background-image: url("images/npheader3.jpg");
+  background-image: url("images/npheader3.jpg");
   background-size:cover;
   
 }
 
-/* Increase the font size of the heading */
 .header h1 {
   font-size:4em;
   color: #F9F9F9;
-  -webkit-text-fill-color:  #F9F9F9; /* Will override color (regardless of order) */
+  -webkit-text-fill-color:  #F9F9F9;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: white;
   text-shadow:
        2px 4px 0 #000;
 }
 
-/* Font & Font size for next header */
 .header h2 {
 	font-family: 'Poiret One', sans-serif;
 	font-size: 2em;
-	-webkit-text-fill-color: black; /* Will override color (regardless of order) */
+	-webkit-text-fill-color: black;
   	-webkit-text-stroke-width: .1px;
   	-webkit-text-stroke-color: white;
 }
@@ -50,6 +46,7 @@ h2 {
 	font-family: 'Poiret One', cursive;
 	font-size: 1.95em;
 }
+
 h5 {
 	font-family: 'Poiret One', cursive;
 	font-size: 1.25em;
@@ -59,8 +56,8 @@ p {
 	font-family: 'Raleway', sans-serif;
 	font-size: 0.85em;
 	text-align: justify;
-
 }
+
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -69,9 +66,8 @@ p {
   top: 0;
 }
 
-/* Style the navigation bar links */
 .navbar a {
-	font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
   float: left;
   display: block;
   color: white;
@@ -83,18 +79,15 @@ p {
   display: none;
 }
 
-/* Right-aligned link */
 .navbar a.right {
   float: right;
 }
 
-/* Change color on hover */
 .navbar a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Active/current link */
 .navbar a:active {
   background-color: #666;
   color: white;
@@ -115,21 +108,27 @@ p {
 }
 
 @media only screen and (device-width: 768px),
-       only screen and (max-width: 768px) {
-  .navbar.responsive {position: relative;}
+       only screen and (max-width: 768px),
+       only screen and (orientation: landscape) {
+  .navbar.responsive {
+  	position: relative;
+  }
   .navbar.responsive .icon{
     position: absolute;
     right: 0;
     top: 0;
   }
-
   .navbar.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .navbar.responsive {float: none;}
-  .navbar.responsive {position: relative;}
+  .navbar.responsive {
+  	float: none;
+  }
+  .navbar.responsive {
+  	position: relative;
+  }
   .navbar.responsive {
     display: block;
     width: 100%;
@@ -137,28 +136,25 @@ p {
   }
 }
 
-
 .row {  
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox; 
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   background-image: url("images/linen.png");
-
 }
 
 .side {
-  -ms-flex: 30%; /* IE10 */
+  -ms-flex: 30%; 
   flex: 30%;
 background-image: url("images/debut_light.png");
   padding: 15px;
 }
 
 .main {   
-  -ms-flex: 70%; /* IE10 */
+  -ms-flex: 70%; 
   flex: 70%; 
   padding: 15px;
-
 }
 
 .fakeimg {
@@ -185,7 +181,6 @@ background-image: url("images/debut_light.png");
 	height: auto;
 	float: left;
 	padding:15px;
-
 }
 
 #myBtn {
@@ -204,14 +199,12 @@ background-image: url("images/debut_light.png");
   border-radius:85%;
 }
 
-
 .footer {
   background: #ddd;
   text-align: center;
   padding:100px;
   padding-bottom: 5px;
 }
-
 
 @media only screen and (device-width: 768px),
        only screen and (max-width: 768px) {
@@ -242,6 +235,7 @@ background-image: url("images/debut_light.png");
   background: #55ACEE;
   color: white;
 }
+
 .fa-youtube {
   background: #bb0000;
   color: white;
@@ -251,6 +245,7 @@ background-image: url("images/debut_light.png");
   background: #125688;
   color: white;
 }
+
 .fa-rss {
   background: #ff6600;
   color: white;
@@ -608,10 +603,9 @@ function myFunction() {
   }
 }
 </script>
+
 <script>
-
 window.onscroll = function() {scrollFunction()};
-
 function scrollFunction() {
   if (document.body.scrollTop > 25 || document.documentElement.scrollTop > 25) {
     document.getElementById("myBtn").style.display = "block";
@@ -619,7 +613,6 @@ function scrollFunction() {
     document.getElementById("myBtn").style.display = "none";
   }
 }
-
 
 function topFunction() {
   document.body.scrollTop = 0;
