--- a/index2.html
+++ b/index2.html
@@ -439,7 +439,7 @@
     }
     </script>
     <script>
-    function viewSource() {;
+    function viewSource() {
         var source = "<html>";
         source += document.getElementsByTagName('html')[0].innerHTML;
         source += "</html>";
