--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
 
+/* CSS Reset https://meyerweb.com/eric/tools/css/reset/index.html */
+/*--------------------------------------------------------------*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -52,6 +54,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/*--------------------------------------------------------------------*/
     * {
         box-sizing: border-box;
     }
