--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ body {
                     <p>
                         <center><a href="index2.html" class="btn btn-success btn-block" role="button">Web Resume - Click Here</a></center>
                     </p>
+                    <p>
+                        <center><a href="skeleton-test/index.html" class="btn btn-success btn-block" role="button">Reminders - Click Here</a></center>
+                    </p>
                     <h3>Sachin Rajbhandari</h3>
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
