--- a/skeleton-test/index.html
+++ b/skeleton-test/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Testing Responsive - Simple Skeleton Framework</title>
+    <title>Testing Responsive - Simple Skeleton Boilerplate</title>
     <meta name="description" content="List of Web Design Crayons">
     <meta name="author" content="Sachin">
     <!-- Mobile Specific Metas
@@ -49,7 +49,7 @@ h4 {
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
-        <p>This page is built to test out small part of Skeleton Boilerplate, RWD framework. <a href="http://getskeleton.com/">Click here to learn & get Skeleton!</a></p>
+        <p>This page is built to test out small part of Skeleton Boilerplate, not full blown, just like its name RWD framework. <a href="http://getskeleton.com/">Click here to learn & get Skeleton!</a></p>
         <p>Other Pages based on Skeleton Coming Soon!</p>
         <h4>HTML & CSS REMINDERS</h4>
         <div class="row">
