--- a/index.html
+++ b/index.html
@@ -124,13 +124,21 @@ body {
                     <p>English</p>
                     <p>Nepali</p>
                     <p>Hindi</p>
-                    <hr>
+                    
                 </div>
                 <!-- End Left Column -->
             </div>
             <!-- Right Column -->
             <div class="col-sm-8">
                 <div class="well">
+                    <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
+                    <hr>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website [WEBSITE I]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS [WEBSITE II]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
@@ -161,14 +169,7 @@ body {
                     <h5><b>Orchid Science College</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
                     <p>Physics, Chemistry, Biology & Mathematics</p><br>
-                    <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
-                    <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br><br>
+                    <br>
                 </div>
             </div>
         </div>
