--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ body {
                     <hr>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website [WEBSITE I]</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS [WEBSITE II]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a style =  " color: black;" href="howtohtmlcss.pdf" download> Personal Research - How To Startup Best HTML&CSS Coding [PDF Download] </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
@@ -155,7 +156,7 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration of PCs, MACs, printers & scanners including software troubleshooting and updates. Assisted students on working with various Microsoft products. Taken classes on Adobe Photoshop & Illustrator. </p><br>
+                    <p>Assisted in deployment, configuration of PCs, MACs, printers & scanners including software troubleshooting and updates. Assisted students on working with various Microsoft products. Taken classes on Adobe Photoshop & Illustrator. </p>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
                     <h5><b>Online Learning</b></h5>
