--- a/index2.html
+++ b/index2.html
@@ -316,7 +316,9 @@
                                     <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Working on Responsive Design Website Prototype for Django Project (Current) </a></li>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
                                     <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS (linuxchats.com)</a></li>
+                                    <li><a style =  " color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
                                     <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects (github.com/sachinkrb)</a></li>
+                                    <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Reminder Lists For Creations </a></li>
                                     <li><a href="#" style="color:black"> Django Powered Website Coming Soon!</a></li>
                                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Account</a></li>
                                     <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it Account</a></li>
