--- a/index2.html
+++ b/index2.html
@@ -56,6 +56,7 @@
     }
 
     .resume-frame-1 {
+        -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, .25);
         box-shadow: 0 0 15px 0 rgba(0, 0, 0, .25);
         font-weight: 400
     }
@@ -69,9 +70,14 @@
     .resume-frame-1 header {
         background: #03ACEF;
         color: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: end;
+        -ms-flex-align: end;
         align-items: flex-end;
         padding: 5px 10px;
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap
     }
 
@@ -85,14 +91,23 @@
     }
 
     .resume-frame-1 .resume-frame-2 section {
+        display: -ms-grid;
         display: grid;
         grid-column-gap: 10px;
+        -ms-grid-columns: 40px 10px 1fr;
         grid-template-columns: 40px 1fr;
         grid-template-areas: "title role1""title role2""title role3""title role4";
     }
 
     .resume-frame-1 .resume-frame-2 section>h1 {
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 4;
+        -ms-grid-column: 1;
+        -webkit-writing-mode: vertical-lr;
+        -ms-writing-mode: tb-lr;
         writing-mode: vertical-lr;
+        -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
         transform: rotate(180deg);
         grid-area: title;
         background: #03ACEF;
@@ -123,6 +138,7 @@
     }
 
     .resume-frame-1 .resume-frame-2 .resume-frame-3 ul {
+        display: -ms-grid;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         padding: 0;
@@ -146,6 +162,8 @@
         background-color: rgb(0, 0, 0);
         background-color: rgba(0, 0, 0, 0.9);
         overflow-y: hidden;
+        -webkit-transition: 0.5s;
+        -o-transition: 0.5s;
         transition: 0.5s;
     }
 
@@ -163,6 +181,8 @@
         font-size: 36px;
         color: #818181;
         display: block;
+        -webkit-transition: 0.3s;
+        -o-transition: 0.3s;
         transition: 0.3s;
     }
 
@@ -316,7 +336,7 @@
                                     <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Working on Responsive Design Website Prototype for Django Project (Current) </a></li>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
                                     <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS (linuxchats.com)</a></li>
-                                    <li><a style =  " color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
+                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
                                     <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects (github.com/sachinkrb)</a></li>
                                     <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Reminder Lists For Creations </a></li>
                                     <li><a href="#" style="color:black"> Django Powered Website Coming Soon!</a></li>
