--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/custom.css"> <!-- Custom CSS except the boilerplates -->
   <meta name="theme-color" content="#fafafa">
   <link href="https://fonts.googleapis.com/css?family=Cookie|Great Vibes|Gruppo|Bad Script|Lovers Quarrel|Stalemate&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 <body>
@@ -28,9 +29,10 @@
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
+   
     <div class="left">
       <img src="img/wellbehaved.jpg" alt="A picture"/>
     </div>
@@ -68,12 +70,24 @@
         </div>
       </div>
     </div>
-    <div class="footer">footer</div>
+    <div class="footer">
+      <div class="social-media"></div>
+    </div>
   </div>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
+  <script>
+function myFunction() {
+  var x = document.getElementById("main_nav");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>
