--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website [WEBSITE I]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS [WEBSITE II]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website [WEBSITE I Under Construction]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Working On A Makeup Website for Spouse [WEBSITE II Under Construction]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS [WEBSITE III]</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - How To Startup Best HTML&CSS Coding [PDF Download] </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
@@ -169,7 +170,7 @@ body {
                     <h5><b>Orchid Science College</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
                     <p>Physics, Chemistry, Biology & Mathematics</p><br>
-                    <br>
+                    
                 </div>
             </div>
         </div>
