--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -34,13 +34,13 @@
     </div>
    
     <div class="left">
-      <img src="img/wellbehaved.jpg" alt="A picture"/>
+      <img src="img/wedding.jpg" alt="A picture"/>
     </div>
     <div class="middle">
-      <img src="img/bride1.jpg" alt="A picture 2"/>
+      <img src="img/coco.jpg" alt="A picture 2"/>
     </div>
     <div class="right" >
-      <img src="img/coco.jpg" alt="A picture 3"/>
+      <img src="img/bride1.jpg" alt="A picture 3"/>
     </div>
     <div class="section">
       <div class="row">
@@ -71,7 +71,9 @@
       </div>
     </div>
     <div class="footer">
-      <div class="social-media"></div>
+      <div class="social-media">
+        
+      </div>
     </div>
   </div>
   <!--[if IE]>
