--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -16,7 +16,6 @@
   <link href="https://fonts.googleapis.com/css?family=Cookie|Great Vibes|Gruppo|Bad Script|Lovers Quarrel|Stalemate&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 <body>
   <div class="wrapper">
     <div class="header">
@@ -32,15 +31,14 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
-   
     <div class="left">
-      <img src="img/wedding.jpg" alt="A picture"/>
+      <img src="img/wedding.jpg" alt="A picture" />
     </div>
     <div class="middle">
-      <img src="img/coco.jpg" alt="A picture 2"/>
+      <img src="img/coco.jpg" alt="A picture 2" />
     </div>
-    <div class="right" >
-      <img src="img/bride1.jpg" alt="A picture 3"/>
+    <div class="right">
+      <img src="img/bride1.jpg" alt="A picture 3" />
     </div>
     <div class="section">
       <div class="row">
@@ -71,25 +69,37 @@
       </div>
     </div>
     <div class="footer">
-      <div class="social-media">
+      
         
-      </div>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-pinterest"></a>
+          <a href="#" class="fa fa-snapchat-ghost"></a>
+      <div class="info-here"><p>Contact : Rozee Shrestha</p>
+          <p>Email : makeupbyrozy@comingsoon.com</p>
+      <p>Phone : 1(123)-456-7890</p>
+    </div>   
+
+  
     </div>
+
   </div>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
   <script>
-function myFunction() {
-  var x = document.getElementById("main_nav");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
+  function myFunction() {
+    var x = document.getElementById("main_nav");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
+    }
   }
-}
-</script>
+
+  </script>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>
