--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -69,21 +69,17 @@
       </div>
     </div>
     <div class="footer">
-      
-        
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-pinterest"></a>
-          <a href="#" class="fa fa-snapchat-ghost"></a>
-      <div class="info-here"><p>Contact : Rozee Shrestha</p>
-          <p>Email : makeupbyrozy@comingsoon.com</p>
-      <p>Phone : 1(123)-456-7890</p>
-    </div>   
-
-  
+      <a href="#" class="fa fa-youtube"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-pinterest"></a>
+      <a href="#" class="fa fa-snapchat-ghost"></a>
+      <div class="info-here">
+        <p>Contact : Rozee Shrestha</p>
+        <p>Email : makeupbyrozy@comingsoon.com</p>
+        <p>Phone : 1(123)-456-7890</p>
+      </div>
     </div>
-
   </div>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
